# tool_cv_corpus

./: .code-workspace  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SESSION_STATE.template.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/rules/: project.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml  release.yml
architecture/pipeline/: index.html
architecture/schema/: index.html
docs/: index.md
docs/architecture/: pipeline.md  schema.md
docs/plugin_authoring/: index.md
docs/user_guide/: building_a_corpus.md  cli_reference.md  generating.md  getting_started.md  ingesting.md  rendering.md
examples/corpus_jordan_taylor/: README.md
examples/corpus_jordan_taylor/achievements/: ach_launched_metered_billing.yaml  ach_migrated_ingestion_pipeline.yaml  ach_open_sourced_profile_tool.yaml  ach_reduced_cohort_latency.yaml
examples/corpus_jordan_taylor/organizations/: acme_analytics.yaml  helioform_labs.yaml
examples/corpus_jordan_taylor/persons/: jordan_taylor.yaml
examples/corpus_jordan_taylor/roles/: senior_swe_acme_2021.yaml  staff_eng_helioform_2023.yaml
examples/corpus_jordan_taylor/skills/: ad_tech_attribution.yaml  distributed_systems.yaml  fastapi.yaml  go.yaml  kubernetes.yaml  observability.yaml  postgres.yaml  python.yaml
examples/corpus_jordan_taylor/targets/: principal_eng_foo_tech.yaml
examples/corpus_jordan_taylor/testimonials/: manager_at_acme.yaml
memory/: MEMORY.md
plugin_authoring/: index.html
search/: search_index.json
src/tool_cv_corpus/author/: __init__.py  prompts.py  state.py  writers.py
src/tool_cv_corpus/cli/: __init__.py  author_cmd.py  doctor_cmd.py  generate_cmd.py  ingest_cmd.py  init_cmd.py  main.py  render_cmd.py  review_cmd.py  schema_cmd.py  validate_cmd.py
src/tool_cv_corpus/config/: __init__.py  paths.py  settings.py
src/tool_cv_corpus/generate/: __init__.py  loader.py  scoring.py  selection.py  synthesis.py
src/tool_cv_corpus/generate/llm/: __init__.py  anthropic_provider.py  base.py  cache.py  openai_provider.py
src/tool_cv_corpus/ingest/: __init__.py  base.py  github_profile.py  linkedin_export.py  markdown.py  orcid.py
src/tool_cv_corpus/io/: __init__.py  yaml_loader.py
src/tool_cv_corpus/render/: __init__.py  base.py  docx_renderer.py  html_renderer.py  json_resume.py  typst_renderer.py
src/tool_cv_corpus/schema/: __init__.py  base.py  claims.py  dates.py  entities.py  impact.py  taxonomy.py
src/tool_cv_corpus/schema/migrations/: __init__.py
src/tool_cv_corpus/storage/: __init__.py  cas.py
src/tool_cv_corpus/utils/: __init__.py  paths_windows.py
src/tool_cv_corpus/validate/: __init__.py  runner.py
templates/init/corpus.skeleton/: README.md
templates/init/corpus.skeleton/persons/: _replace_me.yaml
tests/: test_cas.py  test_llm_cache.py  test_paths_windows.py  test_plugin_discovery.py  test_schema_entities.py  test_settings.py
tests/author/: conftest.py  test_prompts.py  test_state.py  test_writers.py
tests/generate/: test_generate_cli.py  test_loader.py  test_scoring.py  test_selection.py  test_synthesis.py
tests/ingest/: conftest.py  test_linkedin_export.py
user_guide/building_a_corpus/: index.html
user_guide/cli_reference/: index.html
user_guide/generating/: index.html
user_guide/getting_started/: index.html
user_guide/ingesting/: index.html
user_guide/rendering/: index.html
(+1 files in other folders)
